IaC/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: smurve-io-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: smurve-io
    kubernetes.io/ingress.allow-http: false
spec:
  tls:
  - secretName: smurve.io
  rules:
  - host: books.smurve.io
    http:
      paths:
      - backend:
          serviceName: books-backend-service
          servicePort: 8000
